# golos

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  release.yml
Scripts/: copy-sidecar.sh  dev-log.sh  dev-run.sh  make-dmg.sh  notarize.sh  release-dmg.sh  reset-onboarding.sh
golos/: AppCoordinator.swift  ContentView.swift  golosApp.swift
golos-asr/: .gitignore  Cargo.toml  README.md
golos-asr/scripts/: build-universal.sh
golos-asr/src/: audio.rs  biasing.rs  lib.rs  main.rs  protocol.rs  session.rs  transcriber.rs
golos-asr/tests/: e2e_test.rs  protocol_test.rs
golos.xcodeproj/: project.pbxproj
golos/AppIcon.icon/: icon.json
golos/Core/: AudioCapture.swift  AudioWriter.swift  ClipboardPasteInjector.swift  DictationCoordinator.swift  HotkeyManager.swift  LocalGigaAMProvider.swift  ModelManager.swift  SidecarProtocol.swift  TextInjector.swift  TranscriptionProvider.swift
golos/Util/: AppPaths.swift  AudioDevices.swift  Localization.swift  Logger.swift  Notifications.swift  Permissions.swift  (+1 more)
golosTests/: AudioWriterTests.swift  CalibrationAnalyzerTests.swift  ClipboardPasteInjectorTests.swift  DictationCoordinatorTests.swift  DictionaryStoreTests.swift  FillerCleanerTests.swift  HistoryStoreTests.swift  HotkeyManagerTests.swift  LocalGigaAMProviderTests.swift  ModelManagerTests.swift  PaletteThemeTests.swift  SidecarProtocolTests.swift  StatsAggregatorTests.swift  StatsStoreTests.swift  TranscriptCorrectorTests.swift  WaveformTests.swift  golosTests.swift
golosUITests/: golosUITests.swift  golosUITestsLaunchTests.swift
(+46 files in other folders)
