[package]
name = "golos-asr"
version = "0.1.0"
edition = "2021"
description = "GigaAM-v3 ONNX transcription sidecar for the golos macOS app"
license = "MIT"

[[bin]]
name = "golos-asr"
path = "src/main.rs"

[dependencies]
transcribe-rs = { version = "0.3", features = ["onnx"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
tempfile = "3.10"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
